Update team name to 'NeuarlNinjas' in index.html

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 <div class="value-item">Learning, not static</div>
                 <div class="value-item">Agentic, not automated</div>
             </div>
-            <div class="team-section"><h3>Team</h3><div class="team-name">[Your Team Name]</div></div>
+            <div class="team-section"><h3>Team</h3><div class="team-name">NeuarlNinjas</div></div>
             <div class="final-cta">Ready to Build the Autonomous Security Future?</div>
             <p class="event-footer">INNOFUSION'26 — Domain 2: Intelligent Systems & Agentic Technology</p>
         </div>
